    justwhen updating.
		
    * Bug Fix: #1663677  (Adam Franco) 
    Detail view for 'link'-type and 'RSS'-type content blocks now displays their
    
		
    * Bug Fix: #1663638  (Adam Franco) 
    Fixed RSS feeds so that ampersands are not doubly encoded.
		
    * Bug Fix:  (Adam Franco) 
    Fixed error in which only one current class was shown to students.
	

v. 1.7.3 (2007-02-16) 
----------------------------------------------------
		
    * Change:  (Alex Chapin) 
    Copy site UI now displayed on Segue home pages by default (changes in
    version1.7.0 hid the copy site UI until a section was expanded).
		
    * Bug Fix:  (Alex Chapin) 
    Fixed Segue home page display for students that was broken by updates to
    Seguehome page display made in version 1.7.0
	

v. 1.7.2 (2007-02-09) 
----------------------------------------------------
		
    * Bug Fix:  (Adam Franco) 
    Fixed error with story definition in 1.7.0 that prevented inserting of 
		
    * Bug Fix:  (Adam Franco) 
    Versions are now displayed whenever the 'show versioning' box is checked,
    not just when it is checked along-side another property such as 'show
    updatedusername'.
	

v. 1.7.1 (2007-02-08) 
----------------------------------------------------
		
    * Bug Fix:  (Adam Franco) 
    Fixed global variable overwrite in page reordering.
	

v. 1.7.0 (2007-02-08) 
----------------------------------------------------
		
    * New feature:  (Alex Chapin) 
    Added a Recent Activity section to the Segue home page that shows a
    dashboard view (sorted by recent first) with Recent Discussions on all sites
    of a given users as well as on all content blocks a given user has added.
    Recent Activity also shows all sites ordered by those the user has most
    recentlyedited with links to the most recent content.
		
    * New feature:  (Alex Chapin) 
    Redesigned Segue home page (default.inc.php) so that all sections except