@@ -34,6 +34,11 @@
 	 
 			Fixed error in which only one current class was shown to students.
 		 (<i>Adam Franco</i>)
+		<li/> Change:  
+			Added a configuration list for additional custom themes to the config
+			to prevent needing to modify the themes/themeslist.inc.php when adding
+			custom themes.
+		 (<i>Alex Chapin</i>)
 	</ul><br/><h2>Version 1.7.3</h2><h3>2007-02-16</h3><ul>
 		<li/> Change:  
 			Copy site UI now displayed on Segue home pages by default (changes
